<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@android:color/background_light">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:src="@color/dark_grey"
        android:id="@+id/studentProfileIv"
        android:layout_height="60dp"
        android:layout_margin="7dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shortCutIv"
        android:background="@drawable/dot_menu"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/dot_menu"/>
    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height= "0.5dp"
        android:background="#d2cccc"
        android:layout_toEndOf="@id/studentProfileIv"
        android:layout_alignBottom="@id/studentProfileIv"
        android:layout_alignEnd="@id/shortCutIv"/>


    <TextView
        android:text="@string/sNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/nameTv"
        android:textColor="@color/textColor"
        android:textStyle="normal|bold"
        android:layout_above="@+id/branchTv"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_alignStart="@+id/SplitLine_hor1" />

    <TextView
        android:text="@string/roomNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roomTv"
        android:layout_below="@+id/nameTv"
        android:layout_alignStart="@+id/SplitLine_hor1" />

    <TextView
        android:text="@string/sem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearTv"
        android:layout_alignBottom="@+id/SplitLine_hor1"
        android:layout_toStartOf="@+id/shortCutIv" />

    <TextView
        android:text="@string/branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/branchTv"
        android:layout_alignBottom="@+id/SplitLine_hor1"
        android:layout_toEndOf="@+id/roomTv"
        android:layout_marginStart="32dp" />


</RelativeLayout>