<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bms_hostel_1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/t"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/bms_logo"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"></LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:textColor="@color/white1"
                android:textColorHint="@color/white2"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:background="@drawable/edittext_underline"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColorHint="@color/white2"
                android:textColor="@color/white1"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:inputType="textPassword"
                android:background="@drawable/edittext_underline"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="end"
                android:textColor="@color/white1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"></LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:text="@string/sign_in"
                android:onClick="signIn"
                android:textColor="@color/white1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded2"
                android:text="@string/google_login"
                android:textColor="@color/white1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/white1"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>