<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="60dp">


        <ImageButton
            android:id="@+id/leftArrow"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:id="@+id/roomNoTv"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/student_profile_textSize"
            android:text="Room Number"
            android:textColor="@color/white1"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_info_outline_black_24dp"
            />
        <ImageButton
            android:id="@+id/rightArrow"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/sNameEt"
        android:hint="@string/sNameInput"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_margin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/editTextHeight"
                    android:layout_weight="1"
                    android:id="@+id/sEmailEt"
                    android:hint="@string/username_hint"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/activity_horizontal_margin" />
                <ProgressBar
                    android:id="@+id/loadPb"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="12dp"
                    android:visibility="visible"
                    android:background="@color/transparent"/>
            </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sUsnEt"
            android:hint="@string/usn"
            android:inputType="textCapCharacters"
            android:drawableStart="@drawable/ic_hostel_room"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sMobileEt"
            android:hint="@string/sMobileInput"
            android:inputType="number"
            android:drawableStart="@drawable/ic_mobile"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:id="@+id/fNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fNameInput"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_guardian2"
            android:textSize="@dimen/student_profile_textSize" />
        <EditText
            android:id="@+id/fMobileEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fMobileInput"
            android:inputType="number"
            android:textIsSelectable="true"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_mobile"
            android:textSize="@dimen/student_profile_textSize" />

        <EditText
            android:id="@+id/fAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:inputType="text|textPostalAddress"
            android:lines="4"
            android:drawableStart="@drawable/ic_address2"
            android:hint="@string/sAddressInput"
            android:textSize="@dimen/student_profile_textSize" />
        <EditText
            android:id="@+id/gNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/gNameInput"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_guardian2"
            android:textSize="@dimen/student_profile_textSize" />
        <EditText
            android:id="@+id/gMobileEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gMobileInput"
            android:inputType="number"
            android:textIsSelectable="true"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_mobile"
            android:textSize="@dimen/student_profile_textSize" />

        <EditText
            android:id="@+id/gAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:maxHeight="@dimen/editTextHeight3"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_address2"
            android:hint="@string/sAddressInput"
            android:textSize="@dimen/student_profile_textSize" />




        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/addHosteliteBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight2"
        android:text="ADD"
        android:enabled="true"
        android:textColor="@color/white1"
        android:background="@color/colorPrimary" />

</LinearLayout>
