<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
    android:id="@+id/activity_student_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.psps.projects.bmshostel.StudentSignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="meshashi00@gmail.com"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sNameTIL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance">

        <EditText
            android:id="@+id/sNameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sNameInput"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/sPassTIL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance">

        <EditText
            android:id="@+id/sPAssEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/white1"/>
</LinearLayout>
</ScrollView>